test/razor.test.views/errors/partialViewNotFound.raz
<h1>partialViewNotFound.raz</h1>
<div>
    <!--[#2.3]-->
    @Html.partial("./_partial.raz")
</div>